<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/publicbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="184dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_pic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/fp_explanation_01"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:text="@string/fp_explanation_02"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="222dp"
        android:layout_height="117dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/logo_with_title" />

    <ImageButton
        android:id="@+id/publicBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/CarMapbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/shop" />

    <ImageButton
        android:id="@+id/etcBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/communityBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/more" />

    <ImageButton
        android:id="@+id/communityBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/etcBtn"
        app:layout_constraintStart_toEndOf="@+id/CarMapbtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/chat" />

    <ImageButton
        android:id="@+id/CarMapbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/communityBtn"
        app:layout_constraintStart_toEndOf="@+id/publicBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/loupe" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="354dp"
        android:layout_height="20dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/white_square" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="10dp"
        android:text="@string/public_facilities"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicBtn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/search_spot"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/CarMapbtn" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/community"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/communityBtn" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/more"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/etcBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>